--- a/package.json
+++ b/package.json
@@ -5,23 +5,47 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start:pwa": "npm run build && cd dist && http-server",
+    "build": "ng build --prod --aot && npm run ngu-app-shell && npm run ngu-sw-manifest",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "cp ./node_modules/hammerjs/hammer.min.js.map ./src && cd functions && npm install",
+    "ngu-app-shell": "./node_modules/.bin/ngu-app-shell --module src/app/app.module.ts --url / --insert-module src/app/loading/loading.module.ts --out dist/index.html",
+    "ngu-sw-manifest": "./node_modules/.bin/ngu-sw-manifest --module src/app/app.module.ts --out dist/ngsw-manifest.json",
+    "firebase:deploy": "npm run build && firebase deploy",
+    "firebase:functions": "firebase serve --only functions",
+    "firebase:functions:develop": "nodemon -x \"npm run firebase:functions\" -w ./functions",
+    "release:major": "changelog -M && git add . && git commit -m 'chore(release): major version release' && npm version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add . && git commit -m 'chore(release): minor version release' && npm version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add . && git commit -m 'chore(release): patch version release' && npm version patch && git push origin && git push origin --tags"
   },
-  "private": true,
+  "private": false,
+  "bugs": {
+    "url": "https://github.com/MichaelSolati/poptart-fitness/issues"
+  },
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.11",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^4.4.3",
     "@angular/router": "^4.2.4",
+    "@angular/service-worker": "^1.0.0-beta.16",
+    "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.4.0",
+    "geofire": "^4.1.2",
+    "hammerjs": "^2.0.8",
+    "ng-pwa-tools": "0.0.15",
+    "normalizecss": "^3.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -29,10 +53,14 @@
     "@angular/cli": "1.4.3",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
+    "firebase-tools": "^3.12.0",
+    "generate-changelog": "^1.5.0",
+    "http-server": "^0.10.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -41,6 +69,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.12.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
