--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "cp ./node_modules/hammerjs/hammer.min.js.map ./src && cd functions && npm install",
-    "ngu-app-shell": "./node_modules/.bin/ngu-app-shell --module src/app/app.module.ts --url / --insert-module src/app/loading/loading.module.ts --out dist/index.html",
+    "ngu-app-shell": "./node_modules/.bin/ngu-app-shell --module src/app/app.module.ts --out dist/index.html",
     "ngu-sw-manifest": "./node_modules/.bin/ngu-sw-manifest --module src/app/app.module.ts --out dist/ngsw-manifest.json",
     "firebase:deploy": "npm run build && firebase deploy",
     "firebase:functions": "firebase serve --only functions",
@@ -25,6 +25,7 @@
     "url": "https://github.com/MichaelSolati/poptart-fitness/issues"
   },
   "dependencies": {
+    "@agm/core": "github:MichaelSolati/agm-ssr",
     "@angular/animations": "^4.2.4",
     "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.4",
