--- a/functions/package.json
+++ b/functions/package.json
@@ -2,9 +2,10 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~4.2.1",
-    "firebase-functions": "^0.5.7",
-    "geofire": "^4.1.2"
+    "firebase-admin": "^5.3.0",
+    "firebase-functions": "^0.6.3",
+    "geofire": "^4.1.2",
+    "request": "^2.83.0"
   },
   "private": true
 }
