--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "firebase-admin": "^5.3.0",
     "firebase-functions": "^0.6.3",
-    "geofire": "^4.1.2",
+    "geokit": "0.0.1-dev.20171001T164020000Z.43a3cc4",
     "request": "^2.83.0"
   },
   "private": true
