--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angularfire2": "^5.0.0-rc.2",
     "core-js": "^2.5.1",
     "firebase": "^4.5.0",
+    "geokit": "0.0.1-dev.20171001T164020000Z.43a3cc4",
     "hammerjs": "^2.0.8",
     "ng-pwa-tools": "0.0.15",
     "normalizecss": "^3.0.0",
