--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
 script:
   - npm run build
 after_success:
-  - firebase deploy --non-interactive --token $FIREBASE_TOKEN
+  - firebase deploy --project default --non-interactive --token $FIREBASE_TOKEN
