--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "postinstall": "cd functions && npm install",
     "firebase:deploy": "npm run build && firebase deploy",
     "firebase:functions": "firebase serve --only functions --project dev",
     "firebase:functions:develop": "nodemon -x \"npm run firebase:functions\" -w ./functions",
