feat(events): create hook to purge past events

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ script:
   - npm run build
 after_success:
   - firebase deploy --project default --non-interactive --token $FIREBASE_TOKEN
+  - firebase deploy --project dev --non-interactive --token $FIREBASE_TOKEN
