--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "ng": "ng",
     "start": "ng serve -o",
     "start:pwa": "npm run build && cd dist && http-server",
-    "build": "ng build --prod --aot",
+    "build": "rm -rf dist && ng build --prod --aot",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "cd functions && npm install",
-    "firebase:deploy": "npm run build && firebase deploy",
-    "firebase:functions": "firebase deploy --only functions --project dev",
-    "firebase:functions:develop": "nodemon -x \"npm run firebase:functions\" -w ./functions",
+    "postinstall": "npm --prefix ./functions install ./functions",
+    "docs": "rm -rf dist && typedoc --module node --target es5 --out dist/ --exclude **/*.spec.ts src/app/",
+    "deploy": "npm run build && firebase deploy --project default",
+    "deploy:docs": "npm run docs && firebase deploy --project dev",
+    "deploy:travis": "npm run build && firebase deploy --project default --non-interactive --token $FIREBASE_TOKEN",
+    "deploy:docs:travis": "npm run docs && firebase deploy --project dev --non-interactive --token $FIREBASE_TOKEN",
+    "functions": "nodemon -x \"firebase serve --only functions --project dev\" -w ./functions",
     "release:major": "changelog -M && git add . && git commit -m 'chore(release): major version release' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add . && git commit -m 'chore(release): minor version release' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add . && git commit -m 'chore(release): patch version release' && npm version patch && git push origin && git push origin --tags"
@@ -72,6 +75,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
+    "typedoc": "^0.9.0",
     "typescript": "~2.3.3"
   }
 }
