feat(pwa): add service worker and manifest

--- a/src/ngsw-manifest.json
+++ b/src/ngsw-manifest.json
@@ -9,6 +9,9 @@
           },
           "https://poptart.fitness/": {
             "match": "prefix"
+          },
+          "http://localhost:8080/": {
+            "match": "prefix"
           }
         },
         "cache": {
